cmake_minimum_required(VERSION 3.10.2)

add_executable(ans_2_5 ans_2_5.c)
add_executable(ans_2_11 ans_2_11.c)
add_executable(ans_2_12 ans_2_12.c)
add_executable(ans_2_14 ans_2_14.c)
add_executable(ans_2_15 ans_2_15.c)
add_executable(ans_2_21 ans_2_21.c)
add_executable(ans_2_23 ans_2_23.c)
add_executable(ans_2_25 ans_2_25.c)
add_executable(ans_2_26 ans_2_26.c)
add_executable(ans_2_27 ans_2_27.c)
add_executable(ans_2_30 ans_2_30.c)
add_executable(ans_2_31 ans_2_31.c)
add_executable(ans_2_32 ans_2_32.c)
add_executable(ans_2_35 ans_2_35.c)
add_executable(ans_2_36 ans_2_36.c)
add_executable(ans_2_42 ans_2_42.c)
add_executable(ans_2_54 ans_2_54.c)
add_executable(ans_2_57 ans_2_57.c)
add_executable(ans_2_58 ans_2_58.c)
add_executable(ans_2_59 ans_2_59.c)
add_executable(ans_2_60 ans_2_60.c)
add_executable(ans_2_61 ans_2_61.c)
add_executable(ans_2_62 ans_2_62.c)
add_executable(ans_2_63 ans_2_63.c)
add_executable(ans_2_64 ans_2_64.c)
add_executable(ans_2_65 ans_2_65.c)
add_executable(ans_2_66 ans_2_66.c)
add_executable(ans_2_67 ans_2_67.c)
add_executable(ans_2_68 ans_2_68.c)
add_executable(ans_2_69 ans_2_69.c)
add_executable(ans_2_70 ans_2_70.c)
add_executable(ans_2_71 ans_2_71.c)
add_executable(ans_2_72 ans_2_72.c)
add_executable(ans_2_73 ans_2_73.c)
add_executable(ans_2_74 ans_2_74.c)
add_executable(ans_2_75 ans_2_75.c)
add_executable(ans_2_76 ans_2_76.c)
add_executable(ans_2_77 ans_2_77.c)
add_executable(ans_2_78 ans_2_78.c)
add_executable(ans_2_79 ans_2_79.c)
add_executable(ans_2_80 ans_2_80.c)
add_executable(ans_2_81 ans_2_81.c)
add_executable(ans_2_82 ans_2_82.c lib/random.c)
add_executable(ans_2_84 ans_2_84.c)
add_executable(ans_2_89 ans_2_89.c lib/random.c)
add_executable(ans_2_90 ans_2_90.c)
add_executable(ans_2_91_97 lib/random.c floats/float_f2i.c floats/float_half.c
  floats/float_i2f.c floats/float_twice.c floats/float_absval.c
  floats/float_negate.c floats/main.c)


add_executable(get_msb get_msb.c)

target_link_libraries(ans_2_5 PUBLIC print_bytes)
target_include_directories(ans_2_5 PUBLIC
  "${PROJECT_BINARY_DIR}"
  "${PROJECT_SOURCE_DIR}")
