cmake_minimum_required(VERSION 3.10.2)

SET(PROJECT_DEP_PATH "../../../common")


add_executable(fork fork.c ${PROJECT_DEP_PATH}/csapp.c)
add_executable(waitpid1 waitpid1.c ${PROJECT_DEP_PATH}/csapp.c)
add_executable(waitpid2 waitpid1.c ${PROJECT_DEP_PATH}/csapp.c)
add_executable(shellex shellex.c ${PROJECT_DEP_PATH}/csapp.c)
add_executable(kill kill.c ${PROJECT_DEP_PATH}/csapp.c)
add_executable(sigint sigint.c ${PROJECT_DEP_PATH}/csapp.c)
add_executable(sigintsafe sigintsafe.c ${PROJECT_DEP_PATH}/csapp.c)
add_executable(signal1 signal1.c ${PROJECT_DEP_PATH}/csapp.c)
add_executable(signal2 signal2.c ${PROJECT_DEP_PATH}/csapp.c)
add_executable(procmask1 procmask1.c ${PROJECT_DEP_PATH}/csapp.c)
add_executable(procmask2 procmask2.c ${PROJECT_DEP_PATH}/csapp.c)
add_executable(waitforsignal waitforsignal.c ${PROJECT_DEP_PATH}/csapp.c)
add_executable(sigsuspend sigsuspend.c ${PROJECT_DEP_PATH}/csapp.c)
add_executable(setjmp setjmp.c ${PROJECT_DEP_PATH}/csapp.c)
add_executable(restart restart.c ${PROJECT_DEP_PATH}/csapp.c)

target_link_libraries(fork PRIVATE pthread)
target_link_libraries(waitpid1 PRIVATE pthread)
target_link_libraries(waitpid2 PRIVATE pthread)
target_link_libraries(shellex PRIVATE pthread)
target_link_libraries(kill PRIVATE pthread)
target_link_libraries(sigint PRIVATE pthread)
target_link_libraries(sigintsafe PRIVATE pthread)
target_link_libraries(signal1 PRIVATE pthread)
target_link_libraries(signal2 PRIVATE pthread)
target_link_libraries(procmask1 PRIVATE pthread)
target_link_libraries(procmask2 PRIVATE pthread)
target_link_libraries(waitforsignal PRIVATE pthread)
target_link_libraries(sigsuspend PRIVATE pthread)
target_link_libraries(setjmp PRIVATE pthread)
target_link_libraries(restart PRIVATE pthread)
